--- a/src/homebrew-monitor-auth/package.json
+++ b/src/homebrew-monitor-auth/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser-json": "^1.9.2",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "morgan": "^1.8.1"
   }
 }
