--- a/src/homebrew-monitor-auth/package.json
+++ b/src/homebrew-monitor-auth/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser-json": "^1.9.2",
+    "chalk": "^1.1.3",
     "express": "^4.15.2",
+    "js-yaml": "^3.8.3",
     "morgan": "^1.8.1"
   }
 }
