Fixed logging format and login response

--- a/src/homebrew-monitor-auth/config.yml
+++ b/src/homebrew-monitor-auth/config.yml
@@ -1,4 +1,4 @@
 name: auth
 color: green
 morgan:
-  format: ':method :status :response-time ms - :url'
+  format: ':method :status :url - :response-time ms'
