--- a/src/homebrew-monitor-auth/package.json
+++ b/src/homebrew-monitor-auth/package.json
@@ -12,6 +12,12 @@
   "dependencies": {
     "body-parser-json": "^1.9.2",
     "express": "^4.15.2",
-    "js-yaml": "^3.8.3"
+    "js-yaml": "^3.8.3",
+    "should": "^11.2.1"
+  },
+  "devDependencies": {
+    "mocha": "^3.3.0",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.0"
   }
 }
