--- a/src/homebrew-monitor-auth/package.json
+++ b/src/homebrew-monitor-auth/package.json
@@ -13,6 +13,7 @@
     "body-parser-json": "^1.9.2",
     "express": "^4.15.2",
     "js-yaml": "^3.8.3",
+    "jsonwebtoken": "^7.4.0",
     "should": "^11.2.1"
   },
   "devDependencies": {
