--- a/src/common/package.json
+++ b/src/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-microservice",
+  "name": "homebrew-common",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -9,10 +9,7 @@
   "author": "Cody Pugliese",
   "license": "ISC",
   "dependencies": {
-    "body-parser-json": "^1.9.2",
     "chalk": "^1.1.3",
-    "express": "^4.15.2",
-    "js-yaml": "^3.8.3",
-    "morgan": "^1.8.1"
+    "express": "^4.15.2"
   }
 }
