--- a/src/homebrew-monitor-auth/package.json
+++ b/src/homebrew-monitor-auth/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser-json": "^1.9.2",
+    "chalk": "^1.1.3",
     "express": "^4.15.2",
     "js-yaml": "^3.8.3",
     "jsonwebtoken": "^7.4.0",
+    "morgan": "^1.8.1",
     "should": "^11.2.1"
   },
   "devDependencies": {
