--- a/src/homebrew-monitor-auth/package.json
+++ b/src/homebrew-monitor-auth/package.json
@@ -4,7 +4,7 @@
   "description": "Authentication service for homebrew-monitor",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "AUTH_"
   },
   "author": "",
