--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser-json": "^1.9.2",
     "chalk": "^1.1.3",
     "express": "^4.15.2",
+    "homebrew-monitor-common": "git+git@github.com:cgpuglie/homebrew-monitor-common.git",
     "js-yaml": "^3.8.3",
     "jsonwebtoken": "^7.4.0",
     "morgan": "^1.8.1",
