--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -5,7 +5,7 @@ WORKDIR /usr/src/homebrew-monitor-auth
 
 # Install app dependencies
 COPY . /usr/src/homebrew-monitor-auth
-RUN npm install --production
+RUN npm install
 
 # run
-CMD ["node", "index.js"]
+CMD ["npm", "test"]
