--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,10 @@ jobs:
           command: docker run -it codemeister/homebrew-monitor-auth-test
       - run:
           name: Log into Docker Hub
-          command: docker login -u "${DOCKER_USERNAME}"" -p "${DOCKER_PASSWORD}"
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "publish" ]; then
+              docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
+            fi
       - run:
           name: Build Production Image
           command: |
