--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       only:
         - master
         - publish
-    working_directory: /app/homebrew-monitor-auth
+    working_directory: /app/homebrew-monitor
     docker:
       - image: node:7.10.0
     steps:
@@ -21,26 +21,45 @@ jobs:
             mv /tmp/docker/* /usr/bin
       - run: 
           name: Build Test Image
-          command: docker build -t codemeister/homebrew-monitor-auth-test -f ./Dockerfile.test .
+          command: docker build -t "${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}-test" -f ./Dockerfile.test .
       - run:
           name: Run Test Image
-          command: docker run -it codemeister/homebrew-monitor-auth-test
+          command: docker run -it "${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}-test"
+      - run:
+          name: Install JQ
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ ! -z $CIRCLE_TAG ]; then
+              wget https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 -O /usr/bin/;
+              chmod 755 /usr/bin/jq;
+            else
+              echo "Skipped, branch=${CIRCLE_BRANCH} tag=${CIRCLE_TAG}"
+            fi
       - run:
           name: Log into Docker Hub
           command: |
-            if [ "${CIRCLE_BRANCH}" == "publish" ]; then
+            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ ! -z $CIRCLE_TAG ]; then
               docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
+            else
+              echo "Skipped, branch=${CIRCLE_BRANCH} tag=${CIRCLE_TAG}"
             fi
       - run:
           name: Build Production Image
           command: |
-            if [ "${CIRCLE_BRANCH}" == "publish" ]; then
-              docker build -t codemeister/homebrew-monitor-auth -f ./Dockerfile.production .
+            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ ! -z $CIRCLE_TAG ]; then
+              docker build -t "${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}" -f ./Dockerfile.production .
+            else
+              echo "Skipped, branch=${CIRCLE_BRANCH} tag=${CIRCLE_TAG}"
             fi
-      - run:
+      - deploy:
           name: Publish Production Image
           command: |
-            if [ "${CIRCLE_BRANCH}" == "publish" ]; then
-              docker push codemeister/homebrew-monitor-auth
+            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ ! -z $CIRCLE_TAG ]; then
+              # check newest version
+              exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq ".results[].name == \"${CIRCLE_TAG}\"")
+              if [[ $exists -eq "false" ]]; then
+                docker push "${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_TAG}"
+              fi
+            else
+              echo "Skipped, branch=${CIRCLE_BRANCH} tag=${currentTag}"
             fi
       
