--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,14 +31,10 @@ jobs:
               wget https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 -O /usr/bin/jq;
               chmod 755 /usr/bin/jq;
       - run:
-          name: Check current NPM version against Publshed version
-          command: |
-            currentVersion=$(cat package.json | jq ".version")
-            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq ".results[].name == \"${CIRCLE_TAG}\"")
-            echo "Exists=${exists} Version=${currentVersion}"
-      - run:
           name: Log into Docker Hub
           command: |
+            currentVersion=$(cat package.json | jq -r ".version")
+            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq ".results[].name == \"${currentVersion}\"")
             if [ "${CIRCLE_BRANCH}" == "publish" ] && [ "${exists}" == "false" ]; then
               docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
             else
@@ -47,6 +43,8 @@ jobs:
       - run:
           name: Build Production Image
           command: |
+            currentVersion=$(cat package.json | jq -r ".version")
+            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq ".results[].name == \"${currentVersion}\"")
             if [ "${CIRCLE_BRANCH}" == "publish" ] && [ "${exists}" == "false" ]; then
               docker build -t "${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}" -f ./Dockerfile.production .
             else
@@ -55,6 +53,8 @@ jobs:
       - deploy:
           name: Publish Production Image
           command: |
+            currentVersion=$(cat package.json | jq -r ".version")
+            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq ".results[].name == \"${currentVersion}\"")
             if [ "${CIRCLE_BRANCH}" == "publish" ] && [ "${exists}" == "false" ]; then
               docker push "${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}:${currentVersion}"
             else
