--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
           name: Log into Docker Hub
           command: |
             currentVersion=$(cat package.json | jq -r ".version")
-            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq ".results[].name == \"${currentVersion}\"")
-            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ "${exists}" == "false" ]; then
+            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq -jr ".results[].name == \"${currentVersion}\"" | grep -c "true")
+            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ $exists == 0 ]; then
               docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
             else
               echo "Skipped, branch=${CIRCLE_BRANCH} version=${currentVersion} exists=${exists}"
@@ -44,8 +44,8 @@ jobs:
           name: Build Production Image
           command: |
             currentVersion=$(cat package.json | jq -r ".version")
-            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq ".results[].name == \"${currentVersion}\"")
-            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ "${exists}" == "false" ]; then
+            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq -jr ".results[].name == \"${currentVersion}\"" | grep -c "true")
+            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ $exists == 0 ]; then
               docker build -t "${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}:${currentVersion}" -f ./Dockerfile.production .
             else
               echo "Skipped, branch=${CIRCLE_BRANCH} version=${currentVersion} exists=${exists}"
@@ -54,8 +54,8 @@ jobs:
           name: Publish Production Image
           command: |
             currentVersion=$(cat package.json | jq -r ".version")
-            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq ".results[].name == \"${currentVersion}\"")
-            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ "${exists}" == "false" ]; then
+            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq -jr ".results[].name == \"${currentVersion}\"" | grep -c "true")
+            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ $exists == 0 ]; then
               docker push "${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}:${currentVersion}"
             else
               echo "Skipped, branch=${CIRCLE_BRANCH} version=${currentVersion} exists=${exists}"
