--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,31 +33,34 @@ jobs:
       - run:
           name: Log into Docker Hub
           command: |
-            currentVersion=$(cat package.json | jq -r ".version")
-            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq -jr ".results[].name == \"${currentVersion}\"" | grep -c "true")
-            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ $exists == 0 ]; then
+            currentVersion="$(echo "$(cat package.json)" | jq -jr ".version")"
+            exists="$(echo "$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/")" | jq -jr ".results[].name == \"${currentVersion}\"" | grep -c "true")" || true
+            echo "branch=${CIRCLE_BRANCH} version=${currentVersion} exists=${exists}"
+            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ "$exists" == "0" ]; then
               docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}"
             else
-              echo "Skipped, branch=${CIRCLE_BRANCH} version=${currentVersion} exists=${exists}"
+              echo "Skipped"
             fi
       - run:
           name: Build Production Image
           command: |
-            currentVersion=$(cat package.json | jq -r ".version")
-            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq -jr ".results[].name == \"${currentVersion}\"" | grep -c "true")
-            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ $exists == 0 ]; then
+            currentVersion="$(echo "$(cat package.json)" | jq -jr ".version")"
+            exists="$(echo "$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/")" | jq -jr ".results[].name == \"${currentVersion}\"" | grep -c "true")" || true
+            echo "branch=${CIRCLE_BRANCH} version=${currentVersion} exists=${exists}"
+            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ "$exists" == "0" ]; then
               docker build -t "${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}:${currentVersion}" -f ./Dockerfile.production .
             else
-              echo "Skipped, branch=${CIRCLE_BRANCH} version=${currentVersion} exists=${exists}"
+              echo "Skipped"
             fi
       - deploy:
           name: Publish Production Image
           command: |
-            currentVersion=$(cat package.json | jq -r ".version")
-            exists=$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/" | jq -jr ".results[].name == \"${currentVersion}\"" | grep -c "true")
-            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ $exists == 0 ]; then
+            currentVersion="$(echo "$(cat package.json)" | jq -jr ".version")"
+            exists="$(echo "$(curl -s "https://registry.hub.docker.com/v2/repositories/${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}/tags/")" | jq -jr ".results[].name == \"${currentVersion}\"" | grep -c "true")" || true
+            echo "branch=${CIRCLE_BRANCH} version=${currentVersion} exists=${exists}"
+            if [ "${CIRCLE_BRANCH}" == "publish" ] && [ "$exists" == "0" ]; then
               docker push "${DOCKER_USERNAME}/${CIRCLE_PROJECT_REPONAME}:${currentVersion}"
             else
-              echo "Skipped, branch=${CIRCLE_BRANCH} version=${currentVersion} exists=${exists}"
+              echo "Skipped"
             fi
       
